Fix jasmine-core version to only match 2.4.1
Fix jasmine-core version to only match v2.4.1 to avoid https://github.com/jasmine/jasmine/issues/1195 in v2.5.0. Apparently that has been fixed in jasmine-core, but not yet published.

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   "dependencies": {
     "grunt": "^1.0.1",
     "jasmine-console-reporter": "^1.2.7",
-    "jasmine-core": "^2.4.1",
+    "jasmine-core": "2.4.1",
     "jasmine-reporters": "^2.2.0",
     "lodash": "^4.15.0"
   },
